--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Deploy to Amazon ECR
 
 on:
-  push:
-    branches: [ "main" ]
+  repository_dispatch:
+    types: do-something
 
 env:
   ECR_REPOSITORY: multitenant           # set this to your Amazon ECR repository name
