--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,8 @@
 name: 'Terraform'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+  repository_dispatch:
+    types: do-something
 
 
 env:
