--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ on:
 
 
 env:
-  AWS_REGION: us-east-2    
+  environment: stag    
 
 permissions:
   contents: read
@@ -97,5 +97,5 @@ jobs:
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      run: terraform destroy "-input=false" --auto-approve
+      run: terraform apply -var "environment=${{ env.environment }}" --auto-approve
 
