--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,10 @@
 name: Terraform
 on:
   repository_dispatch:
-    types: do-somethingpush:
+    types: do-something
     paths-ignore:
       - README.md
       - .gitignore
-  pull_request:
-    types:
-      - closed
-    branches:
-      - 'main'
 env:
   environment: stag 
 permissions:
