--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - .gitignore
 env:
   AWS_REGION: us-east-1 
-  environment: sankar
+  environment: {github.event.sankar}
     
 permissions:
   contents: read
