--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Retrieve Variables
         run: |
           API_RESPONSE=$(curl -s -X GET https://api.github.com/repos/kavithaaaaa/leno/dispatches )
-          environment= ${{ "github.event.client_payload.environment" }}
+          environment= ${{ github.event.client_payload.environment }}
           echo "environment=$environment" >> $GITHUB_ENV
       - name: Use Variables
         run: |
