--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - name: Retrieve Variables
         env:
-          ENVIRONMENT: ${{ github.event.client_payload.environment }}
+          environment: ${{ github.event.client_payload.environment }}
         run: |
-          echo "environment=$ENVIRONMENT"
+          echo "environment=$environment"
 
   terraform-validate:
     runs-on: ubuntu-latest
@@ -66,4 +66,4 @@ jobs:
         run: |
           terraform init
           terraform validate
-          terraform plan -var "environment=$ENVIRONMENT" -out -input=false
+          terraform plan -var "environment=$environment" -out -input=false
