--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,9 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
       - name: terraform-plan
         env:
-          ENVIRONMENT= ${{ github.event.client_payload.environment }}
+          environment= ${{ github.event.client_payload.environment }}
         run: |
           terraform init
           terraform validate
-          terraform plan -var "environment=$environment" -out -input=false
+          terraform plan -var "environment=$environment" -out -input=falsegit add .
+          
