--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,4 +66,4 @@ jobs:
         run: |
           terraform init
           terraform validate
-          terraform plan -var "environment=$environment" -out -input=falsegit add .
+          terraform plan -var "environment=$environment" -out -input=false
